2009-03-06  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Set no-byte-compile
	variable in site-start.el.

2009-02-26  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (NEED_EMACS, DOCS, SITEFILE): Reorder.

2009-02-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (inherit): Inherit base.eclass.
	(EXPORT_FUNCTIONS): Add case statement for EAPI.
	(elisp_src_prepare): New function, calls autopatch feature from
	base.eclass.
	(elisp_src_unpack): Ditto for EAPI 0 or 1.
	(elisp_src_configure): New function, does nothing.

2009-02-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Output ebuild phase
	in einfo messages. Omit full directory path.

2009-02-13  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove workaround for
	empty T variable in Paludis, after one year of transition time.
	Add test for existence of temporary directory.

2009-02-07  Christian Faulhammer  <fauli@gentoo.org>

	* elisp.eclass (elisp_src_unpack, elisp_src_install): Remove die
	messages.

2009-01-31  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove backwards
	compatibility kludge related to old versions of this eclass.

2008-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Make sure that
	the last line of the installed init file is properly terminated.

2008-11-16  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): Revert removal of the einfo
	message with the Emacs version (change of 2008-09-13), since this
	information is useful in bug reports.

2008-10-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Add function names to error messages.

	* elisp.eclass (SITEFILE): Move from elisp-common.eclass to here
	and don't assign a default value. Improve its documentation.
	(elisp_src_install): Allow for packages without	site-init file.