@@ -1,5 +1,7 @@
 2009-03-06  Ulrich Mueller  <ulm@gentoo.org>
 
+	* elisp.eclass: Explicitely fail on unknown EAPI.
+
 	* elisp-common.eclass (elisp-site-regen): Set no-byte-compile
 	variable in site-start.el.
 
